syntax ="proto3";

option java_multiple_files = true;
option java_package = "ds.service1";
option java_outer_classname = "TrafficStatusImpl";



package service1;

//Service Definition


service TripPlanner {


 rpc currentStatus (trafficRequest) returns (trafficStatus){}

 rpc  futureStatus (stream futureTrafficRequest) returns (stream forecastTrafficStatus){}

}


message trafficRequest {

  double latitudeCur = 1;
  double longitudeCur = 2;
  double latitudeDes = 3;
  double longitudeDes= 4;

}
 
message futureTrafficRequest {

 double latitudeCur = 1;
 double longitudeCur = 2;
 double latitudeDes = 3;
 double longitudeDes= 4;
 double departureTime = 5;
}

message trafficStatus {

 string message = 1;

}



message forecastTrafficStatus {

string name = 1;

}

