syntax ="proto3";

option java_multiple_files = true;
option java_package = "ds.service2";
option java_outer_classname = "DynamicTrafficControlImpl";

package service2;



//Service Definition

service TrafficUpdates {


 rpc liveUpdate(currentLocation) returns (stream trafficUpdate) {}


 rpc newUser (stream registration) returns (registrationStatus) {}


}


message currentLocation {

 double latitudeCur = 1;
 double longitudeCur = 2;

}

message trafficUpdate {

string update = 1;

} 

message registration {

string userName = 1;

string email = 2;

}


message registrationStatus {

string status = 1;

}